--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -39,7 +39,13 @@
     {% endif %}
 
         {% if post.collection == 'teaching' %}
-          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+          {%- assign start_date = post.date | date: "%b %Y" -%}
+          {%- if post.end_date and post.end_date != "Present" -%}
+            {%- assign end_date = post.end_date | date: "%b %Y" -%}
+          {%- else -%}
+            {%- assign end_date = "Present" -%}
+          {%- endif -%}
+          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ start_date }} - {{ end_date }} </p>
         {% elsif post.collection == 'publications' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.date %}
