--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -35,7 +35,13 @@ layout: default
         {% endif %}
         
         {% if page.collection == 'teaching' %}
-          <p> {{ page.type }}, <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
+          {%- assign start_date = page.date | date: "%b %Y" -%}
+          {%- if page.end_date and page.end_date != "Present" -%}
+            {%- assign end_date = page.end_date | date: "%b %Y" -%}
+          {%- else -%}
+            {%- assign end_date = "Present" -%}
+          {%- endif -%}
+          <p> {{ page.type }}, <i>{{ page.venue }}</i>, {{ start_date }} - {{ end_date }} </p>
         {% elsif page.venue and page.date %}
           <p>Published in <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif page.date %}
@@ -83,7 +89,7 @@ layout: default
         {% include page__taxonomy.html %}
       </footer>
 
-      {% if page.share %}{% include social-share.html %}{% endif %}
+      <!-- {% if page.share %}{% include social-share.html %}{% endif %} -->
 
       {% include post_pagination.html %}
     </div>
